@@ -81,8 +81,8 @@ InteractionPotential.MovableAtom =<html>Moving<br>Atom</html>
 
 # Control panel for the stove
 Stove.Title  =Heat Control
-Stove.Add    =Add
-Stove.Remove =Remove
+Stove.Heat    =Heat
+Stove.Cool    =Cool
 Stove.Zero   =0
 
 # Labels for the pressure gauge
