@@ -15,8 +15,8 @@ import edu.colorado.phet.common.piccolophet.nodes.slider.HSliderNode;
 import edu.umd.cs.piccolo.event.PBasicInputEventHandler;
 import edu.umd.cs.piccolo.event.PInputEvent;
 
-import static edu.colorado.phet.statesofmatter.StatesOfMatterStrings.STOVE_CONTROL_PANEL_ADD_LABEL;
-import static edu.colorado.phet.statesofmatter.StatesOfMatterStrings.STOVE_CONTROL_PANEL_REMOVE_LABEL;
+import static edu.colorado.phet.statesofmatter.StatesOfMatterStrings.STOVE_CONTROL_PANEL_COOL_LABEL;
+import static edu.colorado.phet.statesofmatter.StatesOfMatterStrings.STOVE_CONTROL_PANEL_HEAT_LABEL;
 
 /**
  * This class is the slider that is used to control the StoveNode, causing it
@@ -43,9 +43,9 @@ public class StoveControlSliderNode3 extends HSliderNode {
         super( -1, 1, value, new BooleanProperty( true ) );
 
         // Show labels for add, zero and remove.
-        addLabel( +1, new PhetPText( STOVE_CONTROL_PANEL_ADD_LABEL, LABEL_FONT ) );
+        addLabel( +1, new PhetPText( STOVE_CONTROL_PANEL_HEAT_LABEL, LABEL_FONT ) );
 //        addLabel( 0.0, new PhetPText( STOVE_CONTROL_PANEL_ZERO_LABEL, LABEL_FONT ) );
-        addLabel( -1, new PhetPText( STOVE_CONTROL_PANEL_REMOVE_LABEL, LABEL_FONT ) );
+        addLabel( -1, new PhetPText( STOVE_CONTROL_PANEL_COOL_LABEL, LABEL_FONT ) );
 
         // Return to 0 when the user releases the slider.
         addInputEventListener( new PBasicInputEventHandler() {
