@@ -1,3 +1,5 @@
+> Changed the "0" label on the middle of the stove to be just a tick mark.
+> Changed labels on stove to say "Heat" and "Cool" and internationalized these labels.
 > Modified the stove to be one large unit with a vertical slider on the front.
 # 1.08.08 (58303) Nov 2, 2011
 11/2/11 Deploying to dev for review by design team.
